--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <ul>
       <li>Number 6360217506</li>
       <li>Email address konainbaig6@gmail.com</li>
-      <li>linkden id <a href="www.linkedin.com/in/konain-baig-932134218"><em>konain baig</em></a></li>
+      <li>linkedin I'd konainbaig</li>
     </ul>
     <hr>
     <form class="" action="mailto:info@konainbaig6@gmail.com" method="post" enctype="text/plain">
